--- a/scss/__contacts.scss
+++ b/scss/__contacts.scss
@@ -69,6 +69,26 @@
             line-height: 1.3;
             padding: 13px 61px;
             margin: 0 auto;
+            border: none;
         }
+    }
+}
+
+@media (max-width:650px){
+    .contacts{
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+        &__text{
+            padding: 0;
+        }
+
+        .form{
+            &__input{
+                width: 100%;
+                margin-bottom: 30px;
+            }
+        }
+        
     }
 }
