--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -18,6 +18,26 @@
 
 
     .menu{
+
+        &__btn{
+            
+            width: 30px;
+            height: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0;
+            border:none;
+            background-color: transparent;
+            cursor: pointer;
+            display: none;
+            span{
+                height: 2px;
+                background-color: #fff;
+                width: 100%;
+            }
+        }
+
         &__list{
             display: flex;
             gap: 35px;
@@ -34,5 +54,44 @@
 
     }
 
+}
+
+@media (max-width:860px){
+    .header{
+        .logo{
+            position: relative;
+            z-index: 10;
+        }
+        .menu{
+            &__btn{
+                display: flex;
+                position: relative;
+                z-index: 10;
+                
+            }
+
+            
+
+            &__list{
+                position: absolute;
+                z-index: 5;
+                background-color: #151515;
+                flex-direction: column;
+                align-items: center;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                padding-top: 200px;
+                height: 100vh;
+                transform: translateY(-100%);
+                transition: transform .3s ease;
+
+                &--active{
+                    transform: translateY(0);
+                }
+            }
+        }
+    }
 }
 
