--- a/scss/__how-does.scss
+++ b/scss/__how-does.scss
@@ -51,3 +51,22 @@
     
 }
 
+@media (max-width:540px){
+    .how-does{
+        padding-bottom: 50px;
+        &__list{
+            padding: 30px 0 40px;
+        }
+        &__item{
+            padding: 65px 0 19px 0;
+            margin-right: auto;
+        }
+        &__item::before{
+            right: 0;
+            margin: 0 auto;
+            width: 50px;
+            height: 50px;
+            font-size: 32px;
+        }
+    }
+}
