--- a/scss/__video.scss
+++ b/scss/__video.scss
@@ -17,3 +17,22 @@
         display: block;
     }
 }
+
+@media (max-width:1040px){
+    .video{
+        &__content{
+            width: 100%;
+            height: 400px;
+        }
+    }
+}
+
+@media (max-width:540px){
+    .video{
+        padding-bottom: 50px;
+        &__content{
+            
+            height: 200px;
+        }
+    }
+}
