--- a/scss/__why-lease.scss
+++ b/scss/__why-lease.scss
@@ -24,3 +24,25 @@
 
 
 }
+
+@media (max-width:860px){
+    .why-lease{
+    
+        &__list{
+            
+            grid-template-columns: repeat(2,1fr);
+            gap: 20px;
+            
+        }
+    }
+}
+
+@media (max-width:540px){
+    .why-lease{
+        padding: 50px 0;
+        &__list{
+            
+            grid-template-columns: repeat(1,1fr);
+        }
+    }
+}
